before add live movement

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <span class="toggle-icon">⏱️</span>
                     Delay
                 </button>
-                <button class="toggle-btn" data-visual="comparison">
+                <!-- <button class="toggle-btn" data-visual="comparison">
                     <span class="toggle-icon">📊</span>
                     Comparison
-                </button>
+                </button> -->
                 <button class="toggle-btn" data-visual="frequency">
                     <span class="toggle-icon">📈</span>
                     Frequency
